# party

./: .gitignore  CMakeLists.txt  README.md  setup.sh
docs/: Efficiency.md  FourVector.md  Histogram.md  Minigen.md  Miniroot.md
minigen/: Cargo.toml
minigen/src/: cross_section.rs  lib.rs  main.rs  monte_carlo.rs  utils.rs
miniroot/: CMakeLists.txt
miniroot/bind/: module.cpp
miniroot/include/: FileHeader.hpp  LogicalRecordHeader.hpp  Miniroot.hpp  TTreeMetadata.hpp  TypeUtils.hpp  Unzip.hpp  fileheader.hpp  logicalrecordheader.hpp  miniroot.hpp  ttreemetadata.hpp  typeutils.hpp  unzip.hpp
miniroot/src/: FileHeader.cpp  LogicalRecordHeader.cpp  Miniroot.cpp  TTreeMetadata.cpp  TypeUtils.cpp  fileheader.cpp  logicalrecordheader.cpp  miniroot.cpp  ttreemetadata.cpp  typeutils.cpp
miniroot/test/: main.cpp
notebooks/: efficiency_01.ipynb  histogram_01.ipynb  histogram_02.ipynb  histogram_03.ipynb  minigen-01.ipynb  minigen-02.ipynb  minigen-03.ipynb  minigen-03.py  minigen.ipynb  miniroot.py  vector_01.ipynb  vector_02.ipynb
src/party/: __init__.py  efficiency.py  histogram.py  miniroot.py  vector.py
